--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,6 +75,7 @@
    line-height: 1.6;
    color: #fff;;
    background-color: #f4f4f4;
+   position: relative;
  }
 
  a {
@@ -252,36 +253,25 @@
    }
  }
 
- .hide-nav {
-   transform: translateY(-120%!important);
-   -webkit-transform: translateY(-120%)!important;
+ .active {
+   color: #01A7B7;
  }
 
- ul.menu-left {
-   display: block;
-   max-height: 0;
-   overflow: hidden;
-   -webkit-transition: all 0.3s ease-out;
-   -moz-transition: all 0.3s ease-out;
-   -ms-transition: all 0.3s ease-out;
-   -o-transition: all 0.3s ease-out;
-   transition: all 0.3s ease-out;
-   z-index: 10;
+ .char {
+     display: inline-block;
+     position: relative;
+ }
+ .char::before {
+     content: '.';
+     display: inline-block;
 
-   display: block!important;
-   float: right;
-   max-height: none;
-   @include media-breakpoint-up(md) {
+     position: absolute;
+     top: -1.2em;
+     left: 0;
 
-   }
-   &:before {
-     content: '';
-     display: table;
-     clear: both;
-   }
-   &.collapse {
-     max-height: 15em!important;
-   }
+     text-align: center;
+     width: 100%;
+
  }
 
 
@@ -368,11 +358,11 @@
   }
 
   /* ===================================================================
-   * # about styles
+   * # home-about styles
    *
    * ------------------------------------------------------------------- */
 
-  .about {
+  .home-about {
     text-align: left;
     position: absolute;
     top: 35%;
@@ -391,6 +381,27 @@
     transition: background-size 0.25s ease-in;
     &:hover {
       background-size: 100% 88%;
+    }
+  }
+
+  .link {
+  position: relative;
+  letter-spacing: 0.1em;
+}
+
+  .underline {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transform: translateY(30%) rotate(180deg);
+
+    &--path {
+      fill: transparent;
+      stroke: $dark;
+      stroke-width: 2px;
     }
   }
 
@@ -722,7 +733,14 @@
 }
 
 
-/*** THE END HOME PAGE PROJECT COVER ***/
+/* ===================================================================
+* # about styles
+*
+* ------------------------------------------------------------------- */
+
+  .about {
+    background-color: #F3F4F5;
+  }
 
  /* ===================================================================
  * # skills styles
@@ -730,9 +748,10 @@
  * ------------------------------------------------------------------- */
 
  .skills {
+   margin: 0;
    border-radius: 0;
    text-align: center;
-   background-color: #EAEAEA;
+   background-color: #1c1b20;
    color: #515056;
    padding: 5rem 0px;
    .skills-list {
@@ -760,8 +779,6 @@
      }
    }
  }
-
-
 
 
 /* ===================================================================
