--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,15 +95,16 @@
    font-family: 'raiderfont';
  }
 
- h2 {
+ h2,h3,h4,h5 {
    font-family: 'raiderfont';
    color: #1C1B20;
-   margin-bottom: 1em;
+   word-spacing: 0.5rem;
+   letter-spacing: -1px;
+   margin-bottom: 1.5em;
  }
 
- h3,h4,h5 {
+ span {
    font-family: 'Playfair Display', serif;
-   color: #1C1B20;
  }
 
  p {
@@ -254,7 +255,7 @@
  }
 
  .active {
-   color: #01A7B7;
+   color: #ffcd05;
  }
 
  .char {
@@ -313,7 +314,7 @@
       position: absolute;
       width: 80px;
       height: 200px;
-      background-color: #A54314;
+      background-color: #E8BB05;
       @media (min-width: 460px) {
         left: 30%;
         width: 100px;
@@ -335,8 +336,9 @@
     padding: 0.2em;
     padding-top: 0;
     padding-bottom: 0;
-    color: #A54314;
+    color: #E8BB05;
     span {
+      font-family: 'raiderfont';
       color: #000;
     }
   }
@@ -365,7 +367,7 @@
   .home-about {
     text-align: left;
     position: absolute;
-    top: 35%;
+    top: 30%;
     right: 10%;
     a {
       color: #000;
@@ -385,9 +387,9 @@
   }
 
   .link {
-  position: relative;
-  letter-spacing: 0.1em;
-}
+    position: relative;
+    letter-spacing: 0.1em;
+  }
 
   .underline {
     position: absolute;
@@ -395,9 +397,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-
     transform: translateY(30%) rotate(180deg);
-
     &--path {
       fill: transparent;
       stroke: $dark;
@@ -417,12 +417,12 @@
      .socials {
        display: block;
        position: fixed;
-       top: 40%;
+       top: 35%;
        left: 0;
        z-index: 3;
        width: 3em;
        i {
-         margin: 1em;
+         margin: 2em 1em;
        }
      }
 
@@ -526,7 +526,7 @@
    }
 
   /* -------------------------------------------------------------------
-   * ## socroll
+   * ## scroll-arrow
    * ------------------------------------------------------------------- */
 
    .home-scroll {
@@ -646,7 +646,7 @@
    border-radius: 0;
    text-align: center;
    background-color: #1c1b20;
-   padding: 0 0 0 0;
+   padding: 10em 0 0 0;
  }
 
  @media only screen and (max-width: 768px) {
@@ -703,33 +703,87 @@
 .img-prjct:hover {
   cursor: pointer;
   opacity: .7;
-   -webkit-transform: scale(0.92);
-   -ms-transform: scale(0.92);
-   transform: scale(0.92);
+  -webkit-transform: scale(0.92);
+  -ms-transform: scale(0.92);
+  transform: scale(0.92);
 }
 
 .prjct-wrt-right {
   background-color: #E8BB05;
-   position: absolute;
-   right: 3%;
-   top: 9%;
-   font-family: 'raiderfont';
-   font-size: 2.6em;
-   color: #000;
-   font-weight: 700;
-   max-width: 100%;
+  position: absolute;
+  right: 3%;
+  top: 9%;
+  font-family: 'raiderfont';
+  font-size: 2.6em;
+  color: #000;
+  font-weight: 700;
+  max-width: 100%;
 }
 
 .prjct-wrt-left {
   background-color: #E8BB05;
-   position: absolute;
-   left:3%;
-   top:9%;
-   font-family: 'raiderfont';
-   font-size: 2.6em;
-   color: #000;
-   font-weight: 700;
-   max-width: 100%;
+  position: absolute;
+  left:3%;
+  top:9%;
+  font-family: 'raiderfont';
+  font-size: 2.6em;
+  color: #000;
+  font-weight: 700;
+  max-width: 100%;
+}
+
+.leftInfo {
+  a {
+    color: #EAEAEA;
+  }
+  h5 {
+    margin: 10rem 0 3em 0;
+    color: #EAEAEA;
+  }
+  span {
+    color: #515056;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  span:after {
+    content: '';
+    border-top: 2px solid;
+    margin: 0 20px 0 0;
+    flex: 1 0 20px;
+  }
+  span:after {
+    margin: 0 0 0 20px;
+  }
+}
+
+.rightInfo {
+  a {
+    color: #EAEAEA;
+  }
+  h5 {
+    margin: 10rem 0 3em 0;
+    color: #EAEAEA;
+  }
+  span {
+    color: #515056;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  span:before {
+    content: '';
+    border-top: 2px solid;
+    margin: 0 20px 0 0;
+    flex: 1 0 20px;
+  }
+  span:after {
+    margin: 0 0 0 20px;
+  }
 }
 
 
@@ -740,6 +794,29 @@
 
   .about {
     background-color: #F3F4F5;
+    margin: 0;
+    padding-top: 10em;
+    .about-header {
+      text-align: center;
+      margin-bottom: 6em;
+    }
+  }
+
+  .about-gif {
+    border: 5px solid #E8BB05;
+    margin-right: 50px;
+    height: calc(45vh);
+    background:
+    linear-gradient(
+    rgba(28, 27, 32, 0.7),
+    rgba(28, 27, 32, 0.7)
+    ), url(https://media.giphy.com/media/pOZhmE42D1WrCWATLK/giphy.gif);
+    background-attachment: relative;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top center;
   }
 
  /* ===================================================================
@@ -760,7 +837,7 @@
        font-size: 2em;
        margin: 10px;
        &:hover {
-         color: #01A7B7;
+         color: #ffcd05;
        }
      }
      @include media-breakpoint-up(sm) {
@@ -787,7 +864,7 @@
  * ------------------------------------------------------------------- */
 
  .footer-sec {
-   background-color: #1c1b20;
+   background-color: #fff;
    margin: 0;
  }
 
@@ -795,7 +872,7 @@
    width: 100%;
    position: relative;
    height: auto;
-   background-color: #1c1b20;
+   background-color: #fff;
  }
  .footer .col {
    width: 190px;
@@ -805,18 +882,6 @@
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    padding: 0px 20px 20px 20px;
- }
- .footer .col h1 {
-   margin: 0;
-   padding: 0;
-   font-family: inherit;
-   font-size: 12px;
-   line-height: 17px;
-   padding: 20px 0px 5px 0px;
-   color: #000;
-   font-weight: normal;
-   text-transform: uppercase;
-   letter-spacing: 0.250em;
  }
  .footer .col ul {
    list-style-type: none;
@@ -837,56 +902,4 @@
  .social ul li {
    display: inline-block;
    padding-right: 5px !important;
- }
-
- .footer .col ul li:hover {
-   color: #000;
-   transition: .1s;
-   -webkit-transition: .1s;
-   -moz-transition: .1s;
- }
- .clearfix {
-   clear: both;
- }
- @media only screen and (min-width: 1280px) {
-   .contain {
-     width: 1200px;
-     margin: 0 auto;
-   }
- }
- @media only screen and (max-width: 1139px) {
-   .contain .social {
-     width: 1000px;
-     display: block;
-   }
-   .social h1 {
-     margin: 0px;
-   }
- }
- @media only screen and (max-width: 950px) {
-   .footer .col {
-     width: 33%;
-   }
-   .footer .col h1 {
-     font-size: 14px;
-   }
-   .footer .col ul li {
-     font-size: 13px;
-   }
- }
- @media only screen and (max-width: 500px) {
-     .footer .col {
-       width: 50%;
-     }
-     .footer .col h1 {
-       font-size: 14px;
-     }
-     .footer .col ul li {
-       font-size: 13px;
-     }
- }
- @media only screen and (max-width: 340px) {
-   .footer .col {
-     width: 100%;
-   }
  }
