--- a/css/main.css
+++ b/css/main.css
@@ -658,7 +658,7 @@ header nav ul li a {
 }
 .leftInfo h5 {
   margin: 10rem 0 3em 0;
-  color: #EAEAEA;
+  color: #E0E0E0;
 }
 .leftInfo span {
   color: #515056;
@@ -683,7 +683,7 @@ header nav ul li a {
 }
 .rightInfo h5 {
   margin: 10rem 0 3em 0;
-  color: #EAEAEA;
+  color: #E0E0E0;
 }
 .rightInfo span {
   color: #515056;
