--- a/scss/main.scss
+++ b/scss/main.scss
@@ -738,7 +738,7 @@
   }
   h5 {
     margin: 10rem 0 3em 0;
-    color: #EAEAEA;
+    color: #E0E0E0;
   }
   span {
     color: #515056;
@@ -765,7 +765,7 @@
   }
   h5 {
     margin: 10rem 0 3em 0;
-    color: #EAEAEA;
+    color: #E0E0E0;
   }
   span {
     color: #515056;
