--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,13 @@
 body {
   line-height: 1.6;
   color: #fff;
-  background-color: #f4f4f4;
+  background-color: #fff;
   position: relative;
 }
 
 a {
   text-decoration: none;
-  color: #1C1B20;
+  color: #000;
 }
 a:hover {
   color: #000;
@@ -86,19 +86,14 @@ p {
  * ## header logo
  * ------------------------------------------------------------------- */
 .header-logo {
-  background-color: #1C1B20;
+  background-color: #fff;
+  background-repeat: no-repeat;
   justify-content: center;
   align-items: center;
   padding: 0;
   width: 50px;
   height: 50px;
   display: flex;
-}
-.header-logo span {
-  font-size: 0.85rem;
-  color: #fff;
-  font-family: "raiderfont";
-  line-height: 0.9em;
 }
 
 /* -------------------------------------------------------------------
@@ -108,7 +103,7 @@ a {
   text-decoration: none;
 }
 a:hover, a :focus {
-  color: #4d4d4d;
+  color: #cccccc;
 }
 
 .menu-left a {
@@ -239,7 +234,8 @@ header nav ul li a {
   margin-bottom: 0px;
   height: calc(95vh);
   text-align: center;
-  background-color: #F3F4F5;
+  background-color: #f3f4f5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
 }
 @media (min-width: 992px) {
   .home-sec {
@@ -704,33 +700,6 @@ header nav ul li a {
 }
 
 /* ===================================================================
-* # about styles
-*
-* ------------------------------------------------------------------- */
-.about {
-  background-color: #F3F4F5;
-  margin: 0;
-  padding-top: 10em;
-}
-.about .about-header {
-  text-align: center;
-  margin-bottom: 6em;
-}
-
-.about-gif {
-  border: 5px solid #E8BB05;
-  margin-right: 50px;
-  height: calc(45vh);
-  background: linear-gradient(rgba(28, 27, 32, 0.7), rgba(28, 27, 32, 0.7)), url(https://media.giphy.com/media/pOZhmE42D1WrCWATLK/giphy.gif);
-  background-attachment: relative;
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top center;
-}
-
-/* ===================================================================
 * # skills styles
 *
 * ------------------------------------------------------------------- */
@@ -767,6 +736,34 @@ header nav ul li a {
     font-size: 3.5em;
     margin: 35px;
   }
+}
+
+/* ===================================================================
+* # about styles
+*
+* ------------------------------------------------------------------- */
+.about {
+  background-color: #f3f4f5;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  margin: 0;
+  padding-top: 10em;
+}
+.about .about-header {
+  text-align: center;
+  margin-bottom: 6em;
+}
+
+.about-gif {
+  border: 5px solid #E8BB05;
+  margin-right: 50px;
+  height: calc(45vh);
+  background: linear-gradient(rgba(28, 27, 32, 0.7), rgba(28, 27, 32, 0.7)), url(https://media.giphy.com/media/pOZhmE42D1WrCWATLK/giphy.gif);
+  background-attachment: relative;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 /* ===================================================================
