--- a/scss/main.scss
+++ b/scss/main.scss
@@ -229,7 +229,10 @@
        float: right;
        font-family: 'Open Sans', sans-serif;
        font-weight: 800;
-       font-size: .65rem;
+       font-size: .75rem;
+       @include media-breakpoint-up(lg) {
+         font-size: .65rem;
+       }
        list-style: none;
        padding-left: 0;
        margin: 0;
@@ -243,7 +246,10 @@
          }
          a {
            display: block;
-           padding: 15px 0 15px 0;
+           padding: 6px 4px 0 4px;
+           @include media-breakpoint-up(lg) {
+             padding: 15px 0 15px 0;
+           }
          }
        }
      }
@@ -286,7 +292,7 @@
     z-index: 2;
     margin-top: 0px;
     margin-bottom: 0px;
-    height: calc(95vh);
+    height: calc(140vh);
     text-align: center;
     background-color: #f3f4f5;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
@@ -297,12 +303,13 @@
 
   .heading {
     position: relative;
-    top: 40%;
+    top: 25%;
     max-height: 700px;
     margin: 0px auto;
     text-align: center;
     @include media-breakpoint-up(lg) {
       right: 20%;
+      top: 40%;
     }
     .color-block {
       z-index: -1;
@@ -362,10 +369,21 @@
    * ------------------------------------------------------------------- */
 
   .home-about {
+    max-width: 270px;
+    top: 50%;
+    right: 10%;
+    @include media-breakpoint-up(sm) {
+      top: 55%;
+      right: 15%;
+      min-width: 500px;
+    }
+    @include media-breakpoint-up(lg) {
+      min-width: 200px;
+      top: 30%;
+      right: 10%;
+    }
     text-align: left;
     position: absolute;
-    top: 30%;
-    right: 10%;
     a {
       color: #000;
       font-family: 'Playfair Display', serif;
@@ -401,126 +419,6 @@
       stroke-width: 2px;
     }
   }
-
-  /* -------------------------------------------------------------------
-   * ## socials
-   * ------------------------------------------------------------------- */
-
-   .socials {
-     display: none;
-   }
-
-   @include media-breakpoint-up(lg) {
-     .socials {
-       display: block;
-       position: fixed;
-       top: 35%;
-       left: 0;
-       z-index: 3;
-       width: 3em;
-       i {
-         margin: 2em 1em;
-       }
-     }
-
-     .hovicon {
-       position: absolute;
-       display: block;
-       font-size: 13px;
-       line-height: 20px;
-       cursor: pointer;
-       margin: 10px;
-       border-radius: 50%;
-       text-align: center;
-       position: relative;
-       text-decoration: none;
-       z-index: 1;
-       color: #000;
-     }
-
-     .hovicon:after {
-       pointer-events: none;
-       position: absolute;
-       width: 100%;
-       height: 100%;
-       border-radius: 50%;
-       content:'';
-       -webkit-box-sizing: content-box;
-       -moz-box-sizing: content-box;
-       box-sizing: content-box;
-     }
-     .hovicon:before {
-       speak: none;
-       font-size: 13px;
-       line-height: 60px;
-       font-style: normal;
-       font-weight: normal;
-       font-variant: normal;
-       text-transform: none;
-       display: block;
-       -webkit-font-smoothing: antialiased;
-     }
-
-     /* Effect 4 */
-     .hovicon.effect-4 {
-       width: 20px;
-       height: 20px;
-       box-shadow: 0 0 0 2px rgba(0, 0, 0, 1);
-     }
-     .hovicon.effect-4:before {
-       line-height: 22px;
-     }
-     .hovicon.effect-4:after {
-       top: -2px;
-       left: -2px;
-       padding: 0;
-       z-index: 10;
-       border: 2px dashed #000;
-     }
-     .hovicon.effect-4:hover {
-       box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-       color: #000;
-     }
-     .hovicon.effect-4:hover i {
-       color: #000;
-     }
-
-     /* Effect 4b */
-     .hovicon.effect-4:hover {
-       -webkit-transition: box-shadow 0.2s;
-       -moz-transition: box-shadow 0.2s;
-       transition: box-shadow 0.2s;
-     }
-     .hovicon.effect-4:hover:after {
-       -webkit-animation: spinAround 9s linear infinite;
-       -moz-animation: spinAround 9s linear infinite;
-       animation: spinAround 9s linear infinite;
-     }
-     @-webkit-keyframes spinAround {
-       from {
-         -webkit-transform: rotate(0deg)
-       }
-       to {
-         -webkit-transform: rotate(360deg);
-       }
-     }
-     @-moz-keyframes spinAround {
-       from {
-         -moz-transform: rotate(0deg)
-       }
-       to {
-         -moz-transform: rotate(360deg);
-       }
-     }
-     @keyframes spinAround {
-       from {
-         transform: rotate(0deg)
-       }
-       to {
-         transform: rotate(360deg);
-       }
-     }
-   }
 
   /* -------------------------------------------------------------------
    * ## scroll-arrow
@@ -638,12 +536,20 @@
  *
  * ------------------------------------------------------------------- */
 
+ .subHeading {
+   background-color: #151418;
+   padding: 1em 0 1em 0;
+   span {
+     font-size: 1.6em;
+   }
+ }
+
  .works-sec {
    color: #515056;
    border-radius: 0;
    text-align: center;
    background-color: #1c1b20;
-   padding: 10em 0 0 0;
+   padding: 0;
  }
 
  @media only screen and (max-width: 768px) {
@@ -734,7 +640,12 @@
     color: #EAEAEA;
   }
   h5 {
-    margin: 10rem 0 3em 0;
+    @include media-breakpoint-up(sm) {
+      margin: 5rem 0 1rem 0;
+    }
+    @include media-breakpoint-up(lg) {
+      margin: 10rem 0 3em 0;
+    }
     color: #E0E0E0;
   }
   span {
@@ -761,7 +672,13 @@
     color: #EAEAEA;
   }
   h5 {
-    margin: 10rem 0 3em 0;
+    @include media-breakpoint-up(sm) {
+      margin: 2rem 0 1rem 0;
+    }
+    @include media-breakpoint-up(lg) {
+      margin: 10rem 0 3em 0;
+    }
+
     color: #E0E0E0;
   }
   span {
@@ -783,27 +700,25 @@
   }
 }
 
-
  /* ===================================================================
  * # skills styles
  *
  * ------------------------------------------------------------------- */
 
  .skills {
+   @include media-breakpoint-up(md) {
+     padding: 5rem 0px;
+   }
    margin: 0;
    border-radius: 0;
    text-align: center;
    background-color: #1c1b20;
    color: #515056;
-   padding: 5rem 0px;
    .skills-list {
      padding: 60px 0px;
      i {
        font-size: 2em;
        margin: 10px;
-       &:hover {
-         color: #ffcd05;
-       }
      }
      @include media-breakpoint-up(sm) {
        i {
@@ -822,6 +737,13 @@
    }
  }
 
+ .skills-list-1 {
+   padding: 0;
+ }
+ .skills-list-2 {
+   padding: 0;
+ }
+
 
 /* ===================================================================
 * # about styles
@@ -832,17 +754,28 @@
     background-color: #f3f4f5;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
     margin: 0;
-    padding-top: 10em;
     .about-header {
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 6em;
+      }
       text-align: center;
-      margin-bottom: 6em;
+    }
+    span {
+      color: #000;
+      font-size: 1.2em;
     }
   }
 
   .about-gif {
+    @include media-breakpoint-up(lg) {
+      display: block;
+      margin: 0 5%;
+    }
     border: 5px solid #E8BB05;
-    margin-right: 50px;
     height: calc(45vh);
+    min-height: 280px;
+    min-width: 280px;
+    max-height: 400px;
     background:
     linear-gradient(
     rgba(28, 27, 32, 0.7),
@@ -856,6 +789,19 @@
     background-position: top center;
   }
 
+  .about-col {
+    padding-top: 20px;
+    @include media-breakpoint-up(sm) {
+      margin: 0;
+    }
+    @include media-breakpoint-up(md) {
+      margin: 0 2%;
+    }
+    @include media-breakpoint-up(lg) {
+      margin: 0 1vw;
+    }
+  }
+
 
 
 /* ===================================================================
@@ -866,6 +812,7 @@
  .footer-sec {
    background-color: #fff;
    margin: 0;
+   text-align: center;
  }
 
  .footer {
@@ -874,32 +821,137 @@
    height: auto;
    background-color: #fff;
  }
- .footer .col {
-   width: 190px;
-   height: auto;
-   float: left;
-   box-sizing: border-box;
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   padding: 0px 20px 20px 20px;
+
+ .social {
+   ul {
+     padding: 0;
+     li {
+       display: inline-block;
+     }
+   }
  }
- .footer .col ul {
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
+
+ .email {
+   h5 {
+     font-family: 'Playfair Display', serif;
+   }
  }
- .footer .col ul li {
-   color: #515056;
-   font-size: 14px;
-   font-family: inherit;
-   font-weight: bold;
-   padding: 5px 0px 5px 0px;
-   cursor: pointer;
-   transition: .2s;
-   -webkit-transition: .2s;
-   -moz-transition: .2s;
+
+ .copyright {
+
  }
- .social ul li {
-   display: inline-block;
-   padding-right: 5px !important;
- }
+
+ /* -------------------------------------------------------------------
+  * ## socials
+  * ------------------------------------------------------------------- */
+
+
+    .socials {
+      display: block;
+      position: fixed;
+      top: 35%;
+      left: 0;
+      z-index: 3;
+      width: 3em;
+      i {
+        margin: 2em 1em;
+      }
+    }
+
+    .hovicon {
+      position: absolute;
+      display: block;
+      font-size: 13px;
+      line-height: 20px;
+      cursor: pointer;
+      margin: 10px;
+      border-radius: 50%;
+      text-align: center;
+      position: relative;
+      text-decoration: none;
+      z-index: 1;
+      color: #000;
+    }
+
+    .hovicon:after {
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      content:'';
+      -webkit-box-sizing: content-box;
+      -moz-box-sizing: content-box;
+      box-sizing: content-box;
+    }
+    .hovicon:before {
+      speak: none;
+      font-size: 13px;
+      line-height: 60px;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      display: block;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    /* Effect 4 */
+    .hovicon.effect-4 {
+      width: 20px;
+      height: 20px;
+      box-shadow: 0 0 0 2px rgba(0, 0, 0, 1);
+    }
+    .hovicon.effect-4:before {
+      line-height: 22px;
+    }
+    .hovicon.effect-4:after {
+      top: -2px;
+      left: -2px;
+      padding: 0;
+      z-index: 10;
+      border: 2px dashed #000;
+    }
+    .hovicon.effect-4:hover {
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+      color: #000;
+    }
+    .hovicon.effect-4:hover i {
+      color: #000;
+    }
+
+    /* Effect 4b */
+    .hovicon.effect-4:hover {
+      -webkit-transition: box-shadow 0.2s;
+      -moz-transition: box-shadow 0.2s;
+      transition: box-shadow 0.2s;
+    }
+    .hovicon.effect-4:hover:after {
+      -webkit-animation: spinAround 9s linear infinite;
+      -moz-animation: spinAround 9s linear infinite;
+      animation: spinAround 9s linear infinite;
+    }
+    @-webkit-keyframes spinAround {
+      from {
+        -webkit-transform: rotate(0deg)
+      }
+      to {
+        -webkit-transform: rotate(360deg);
+      }
+    }
+    @-moz-keyframes spinAround {
+      from {
+        -moz-transform: rotate(0deg)
+      }
+      to {
+        -moz-transform: rotate(360deg);
+      }
+    }
+    @keyframes spinAround {
+      from {
+        transform: rotate(0deg)
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
